openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocmui-team-dashboard
  labels:
    app: ocmui-team-dashboard
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: ocmui-team-dashboard
